<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cashout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buton_text_admin">Login as Admin</string>
    <string name="button_text_Member">Login as Member</string>
    <string name="button_text_Tenant">Login as Tenant</string>
    <string name="button_text_logout">Log Out</string>
    <string name="text_view_akun_admin">ADMIN ACCOUNT </string>
    <string name="button_akunbaru">CREATE NEW ACCOUNT</string>
    <string name="button_buat">CREATE</string>
    <string name="title_akunbaru">CREATE NEW ACCOUNT</string>
    <string name="button_back">BACK</string>
    <string name="text_tipeakun">Account Type: </string>
    <string name="text_nama">Name: </string>
    <string name="text_email">E-mail: </string>
    <string name="administrators">administrators</string>
    <string name="text_nomorhp">"Phone Number : "</string>
    <string name="title_profil">Your Account Profile   </string>
    <string name="text_saldo">Balance: </string>
    <string name="button_topup">TOPUP</string>
    <string name="hint_topup">Put topup amount:</string>
    <string name="button_histori">CHECK TRANSACTIONS HISTORY</string>
    <string name="button_edit">EDIT PROFILE</string>
    <string name="button_historiTopup">CHECK TOPUP HISTORY</string>
    <string name="button_ubah">EDIT</string>
    <string name="title_member">MEMBER ACCOUNT </string>
    <string name="title_edit">EDIT PROFILE</string>
    <string name="title_historitopup">TOPUP HISTORY:</string>
    <string name="title_tenants">TENANT ACCOUNT </string>
    <string name="title_payment">PAYMENT MENU</string>
    <string name="text_namatoko">Tenant name:</string>
    <string name="text_jumlah_pembayaran">Put payment amount:</string>
    <string name="button_bayar">PAY NOW</string>
    <string name="my_email">davin@mail.com</string>
    <string name="title_tenants_list">OUR TENANT LIST:</string>
    <string name="title_member_tab2">YOUR TRANSACTIONS HISTORY:</string>
    <string name="title_tab_tenant">YOUR TRANSACTIONS HISTORY:</string>
    <string name="edit_topup">Put top-up amount here</string>
    <string name="add_tenant">Add new Tenant account</string>
    <string name="add_member">Add new Member account</string>
    <string name="add_admin">Add new Admin account</string>
    <string name="title_tenant">TENANT ACCOUNT</string>

</resources>
