<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cashout.FirstActivity" >

    <Button
        android:id="@+id/button_login_tenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:onClick="callLoginAsMember"
        android:text="@string/button_text_Member" />

    <EditText
        android:id="@+id/edit_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login_admin"
        android:layout_alignLeft="@+id/button_login_admin"
        android:layout_alignRight="@+id/button_login_admin"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/my_email" />

    <Button
        android:id="@+id/button_login_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login_tenant"
        android:layout_alignLeft="@+id/button_login_tenant"
        android:onClick="callLoginAsAdmin"
        android:text="@string/buton_text_admin" />

    <Button
        android:id="@+id/button_login_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login_tenant"
        android:layout_below="@+id/button_login_tenant"
        android:onClick="callLoginAsTenant"
        android:text="@string/button_text_Tenant" />

</RelativeLayout>